--- a/Hospital.WPF/Views/Main.xaml
+++ b/Hospital.WPF/Views/Main.xaml
@@ -48,5 +48,9 @@
 	<Grid>
 		<ContentControl Content="{Binding CurrentPage, ElementName=MainWindow}"/>
         <Border BorderThickness="0,1,0,0" VerticalAlignment="Top" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+
+        <DockPanel Height="100" VerticalAlignment="Bottom" Background="Black" Opacity="0.8">
+            <TextBlock Text="{Binding StatusMessage, ElementName=MainWindow}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </DockPanel>
     </Grid>
 </mah:MetroWindow>
